[package]
name = "bolt-rs"
version = "0.3.0"
edition = "2021"

[features]
full    = ["client"]
default = ["client"]

client  = ["dep:chrono", "dep:futures", "dep:hex", "dep:hmac-sha256", "dep:http-body-util", "dep:hyper", "dep:tokio", "dep:urlencoding"]

[dependencies]
# Normal dependencies
reqwest     = { version = "0.11.0",     features = ["json", "multipart"] }
serde       = { version = "1.0.145",    features = []                    }
serde_json  = { version = "1.0.85",     features = []                    }
serde_with  = { version = "2.0.1",      features = []                    }
url         = { version = "2.3.1",      features = []                    }

# Client dependencies
chrono          = { version = "0.4.24",     features = [],          optional = true }
futures         = { version = "0.3.27",     features = [],          optional = true }
hex             = { version = "0.4.3",      features = [],          optional = true }
hmac-sha256     = { version = "1.1.6",      features = [],          optional = true }
http-body-util  = { version = "0.1.0-rc.2", features = [],          optional = true }
hyper           = { version = "0.14",       features = ["full"],    optional = true }
tokio           = { version = "1.26.0",     features = ["full"],    optional = true }
urlencoding     = { version = "2.1.2",      features = [],          optional = true }
thiserror = "1.0.40"
bytes = "1.4.0"

# Development / Testing dependencies
[dev-dependencies]
dotenv  = { version = "0.15.0" }
